manifests-failed/semaphore-1.0.2.tgz-manifest.yaml
---
# Source: semaphore/templates/postgresql/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: semaphore-1.0.2.tgz
  name: semaphore-database
  labels:
    helm.sh/chart: semaphore-1.0.2
    app.kubernetes.io/name: semaphore
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.8.53"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: semaphore-database
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: database
---
# Source: semaphore/templates/semaphore/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: semaphore-1.0.2.tgz
  name: semaphore-service
  labels:
    helm.sh/chart: semaphore-1.0.2
    app.kubernetes.io/name: semaphore
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.8.53"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: semaphore
    app.kubernetes.io/instance: my-release
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
---
# Source: semaphore/templates/semaphore/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: semaphore-1.0.2.tgz
  name: semaphore
  labels:
    helm.sh/chart: semaphore-1.0.2
    app.kubernetes.io/name: semaphore
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.8.53"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: semaphore
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: semaphore
        app.kubernetes.io/instance: my-release
    spec:
      restartPolicy: Always
      imagePullSecrets:
        []
      containers:
        - name: "semaphore"
          image: "ansiblesemaphore/semaphore:v2.8.53"
          imagePullPolicy: "IfNotPresent"
          command: ['sh', '-c']
          args:
            - semaphore service
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /home/semaphore/config.json
              name: semaphore-config-file
              subPath: config.json
          readinessProbe:
            httpGet:
              port: 3000
              path: /ping
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 3
          livenessProbe:
            httpGet:
              port: 3000
              path: /
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 3
      volumes:
        - name: semaphore-configuration
          secret:
            secretName: semaphore-configuration
        - name: semaphore-config-file
          emptyDir: { }
---
# Source: semaphore/templates/postgresql/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: semaphore-1.0.2.tgz
  name: semaphore-database
  labels:
    helm.sh/chart: semaphore-1.0.2
    app.kubernetes.io/name: semaphore
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.8.53"
    app.kubernetes.io/managed-by: Helm
spec:
  serviceName: database
  selector:
    matchLabels:
      app.kubernetes.io/name: semaphore-database
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: semaphore-database
        app.kubernetes.io/instance: my-release
    spec:
      containers:
        - name: "semaphore-database"
          image: "postgres:14-alpine"
          imagePullPolicy: "IfNotPresent"
          args:
            - '-c'
            - 'ssl=on'
            - '-c'
            - 'ssl_cert_file=/var/lib/postgresql/database-certificates/postgres.crt'
            - '-c'
            - 'ssl_key_file=/var/lib/postgresql/database-certificates/postgres.key'
          ports:
            - containerPort: 5432
              name: database
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: semaphore-database-volume-storage
              subPath: postgres
            - mountPath: /var/lib/postgresql/database-certificates
              name: database-certificates-volume
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 3
            tcpSocket:
              port: 5432
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 3
            tcpSocket:
              port: 5432
      volumes:
        - name: database-certificates-volume
          emptyDir: { }
        - name: semaphore-database-volume-storage
          persistentVolumeClaim:
            claimName: semaphore-database-volume
---
# Source: semaphore/templates/semaphore/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: semaphore-1.0.2.tgz
  labels:
    "app.kubernetes.io/name": 'semaphore'
    "app.kubernetes.io/managed-by": "Helm"
    "app.kubernetes.io/instance": "my-release"
    "app.kubernetes.io/component": ""
  name: my-release-semaphore
spec:
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - backend:
          service:
            name: semaphore-service
            port:
              number: 3000
        pathType: "Prefix"
        path: /
    host: "semaphore.example.com"
